--- a/echopixels.html
+++ b/echopixels.html
@@ -1,5 +1,10 @@
-<!-- My Lots Button and Modal -->
+<!-- My Lots Button -->
 <button id="myLotsBtn" style="position:fixed;top:20px;right:20px;z-index:1001;padding:10px 18px;background:#222;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:16px;">My Lots</button>
+
+<!-- Place the modal at the end of the body for proper stacking/context -->
+<!-- ...existing code... -->
+</body>
+<!-- My Lots Modal (moved here for correct stacking and to avoid layout bugs) -->
 <div id="myLotsModal" class="hidden" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.65);z-index:1002;display:flex;align-items:center;justify-content:center;">
   <div style="background:#fff;padding:32px 24px 24px 24px;border-radius:12px;min-width:320px;max-width:90vw;max-height:80vh;overflow:auto;box-shadow:0 8px 32px rgba(0,0,0,0.25);">
     <h2 style="margin-top:0;margin-bottom:18px;font-size:1.5em;color:#222;">Your Lots</h2>
